Fixed: adjusted margins & spacing

--- a/style.css
+++ b/style.css
@@ -10,18 +10,24 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #c7c3a7;
-    background-size: 5px 5px;
     color: #4a473b;
     font-family: Helvetica, sans-serif;
     font-weight: lighter;  
     height: 100vh;
-    letter-spacing: .1rem; 
-    /*
-    background: url(nierautomata-map.jpg) no-repeat center center fixed;
-    */
-    background-size: cover;
+    letter-spacing: 0.1rem; 
+    /*background: url(nierautomata-map.jpg) no-repeat;*/
+
+}
+body::before{
+    content:" ";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background: url(nierautomata-map.jpg) no-repeat;
+    opacity: 0.2;
 }
 
+/*
 body::before{
     content: "";
     position: absolute;
@@ -33,63 +39,62 @@ body::before{
     width: 100%;
     box-shadow: 0 0 100px rgba(0, 0, 0, 0.527) inset;
 }
+*/
 
-.lace-pattern{
-    display:block;
-    height: 40px;
-    background: url(lace.svg) repeat-x left top / 70px 30px, linear-gradient(to right, #4a473b 10px, transparent 10px, transparent 40px) repeat-x left top / 70px 6px;
-    margin-left: 45px;
-    
-}
-
-
-.lace-pattern::before{
-    content: '';
-    position: absolute;
-    background-color: #4a473b;
-    width: 100%;
-    height: 2px;
-    left: 0;
-
-}
-
-nav {
+.primary-navigation {
     background-color: lightblue;
-    height: 37px;
-    margin:5px 0 18px 90px;
+    display:block;
     white-space:nowrap;
     overflow-x: scroll;
     scrollbar-width: none;
+    padding: 1.4rem 0 0.5rem 5.1rem;
 
     &::-webkit-scrollbar{
         height: 0;
     }
-
-    
 }
 
-nav a{    
+.primary-navigation a{    
     box-sizing: border-box;
     display: inline-block;
     background-color: #b1ad99;
-    width: 170px;
-    height: inherit;
-    text-align: center;
-    padding-top: 10px;
-
-    &:not(:last-child){
-        margin: 0 28px 0 0;
-    }
+    font-size: 2rem; 
+    padding: 0.25rem 0 0.25rem 3rem;
+    width: 13.3rem;
 }
 
-nav::before{
+.primary-navigation a:not(:last-child){
+    margin-right: 2.2rem;
+}
+
+.primary-navigation::before{
     content: "";
     position: absolute;
-    height: inherit;
-    width: 7px;
-    margin-left: -48px;
-    border: solid #b4ac9c;
-    border-width: 0 4px 0 10px;
+    height: 3rem;
+    width: 0.7rem;
+    margin: 1rem 0 0 -1.2rem;
+    border: solid black;
+    border-width: 0 0.3rem 0 0.8rem;
+}
+
+
+.lace-pattern{
+    display: block;
+    border-top: solid black 0.2rem;   
+}
+
+.lace-pattern::after{
+    content: "";
+    background-color: lightcoral !important;
+    display:inherit;
+    height: 3rem;
+    background: url(lace.svg) repeat-x left top / 75px 30px, linear-gradient(to right, #4a473b 12px, transparent 10px, transparent 40px) repeat-x left top / 75px 3px;
+    margin: 0 2.5rem 0 4rem;
+    
+}
+
+header {
+    background-color: lightgreen;
 }
 
 header h1{
@@ -99,16 +104,11 @@ header h1{
     text-transform: uppercase;
     text-shadow: 0.3rem 0.3rem #a29f91;
     font-size:3rem;
-    margin: 0 0 0 47px;
-
-    &span {
-        float:center
-    }
+    margin: 0 0 0 4rem;
 }
 
 main {
-    height: 70%;
-    margin: 0 47px 50px 47px;
+    background-color: lightslategray;
 }
 
 
